Update config and allow for more options

--- a/config.yml
+++ b/config.yml
@@ -4,8 +4,11 @@ builds:
   - slim
 
 options:
-  common: "-Duseshrplib -Dvendorprefix=/usr/local"
+  common: "-Duseshrplib -Dvendorprefix=/usr/local -Aldflags='-Wl,-z,now -Wl,-zrelro -Wl,-z,noexecstack' -Accflags='-fpie -fPIC -fstack-protector-all -pie -D_FORTIFY_SOURCE=2' -Duseshrplib"
   threaded: "-Dusethreads"
+  longdouble: "-Duselongdouble"
+  quadmath: "-Dusequadmath"
+  debugging: "-Accflags=-ggdb -DDEBUGGING"
 
 releases:
   - version: 5.30.3
